@@ -1,3 +1,4 @@
+* FEATURE: Added new option KSI_ASYNC_OPT_HMAC_ALGORITHM for overriding default HMAC algorithm set via KSI_CTX options KSI_OPT_AGGR_HMAC_ALGORITHM or KSI_OPT_EXT_HMAC_ALGORITHM.
 * FEATURE: Added new option KSI_ASYNC_OPT_CONF_CONSOLIDATE_CALLBACK for overriding default consolidation handling.
 * IMPROVEMENT: Added async request recycle handling for reducing memory allocations.
 * BUGFIX: Fixed high availability server aggregation persion configuration consolodation.
